--- a/src/stories/Buttons/FilterSortButton/FilterSortButton.module.scss
+++ b/src/stories/Buttons/FilterSortButton/FilterSortButton.module.scss
@@ -1,29 +1,27 @@
 .button {
-    padding: 18px 0;
-    border-radius: 20px;
+    border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
-    border: 1px solid transparent;
     display: inline-block;
     text-align: center;
-    width: 190px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-weight: 500;
-    color: white;
+    border: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #893168;
+    color: white;
+    padding: 4px 8px;
+    padding-right: 12px;
 }
 
 .button>img {
     height: 20px;
-    margin-right: 8px;
+    margin-right: 4px;
 }
 
 @media (max-width: 640px) {
     .button {
-        width: 104px;
         font-size: 14px;
-        padding: 12px 0;
     }
 }
