--- a/src/stories/Buttons/BackButton/BackButton.module.scss
+++ b/src/stories/Buttons/BackButton/BackButton.module.scss
@@ -3,27 +3,23 @@
     border-radius: 20px;
     font-size: 16px;
     font-weight: bold;
-    border: 1px solid transparent;
-    display: inline-block;
-    text-align: center;
-    width: 190px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 500;
-    color: white;
-    background-color: #893168;
-}
-
-.button>img {
-    height: 20px;
-    margin-right: 8px;
+    border: 0px;
+    background-color: transparent;
 }
 
 @media (max-width: 640px) {
     .button {
-        width: 104px;
+        width: 370px;
         font-size: 14px;
         padding: 12px 0;
     }
+}
+
+.button>img {
+    height: 30px;
+    margin-right: 8px;
 }
