--- a/src/stories/Toggles/SubscriptionToggle/SubscriptionToggle.module.scss
+++ b/src/stories/Toggles/SubscriptionToggle/SubscriptionToggle.module.scss
@@ -1,28 +1,36 @@
+* {
+    accent-color: #893168;
+}
+
 .subscriptionToggle {
     display: flex;
     flex-direction: column;
     background-color: #FAFBFD;
+    width: 914px;
 }
 
 .plan {
-
     overflow: hidden;
     transition: all 0.3s;
+    width: 100%;
+    margin: 5px 0;
 }
 
 .planHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     cursor: pointer;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: 90%;
+    border: 1.5px solid #893168;
+    border-radius: 20px;
+    height: 90px;
+    padding: 0 24px;
+
 
     h2 {
-        font-size: 20px;
+        font-size: 28px;
+        font-weight: 500;
         margin: 0;
         display: flex;
         align-items: center;
@@ -30,8 +38,14 @@
 
     p {
         margin: 0;
-        font-size: 16px;
-        color: #555;
+        font-size: 24px;
+        color: #1F2937;
+        font-weight: 700;
+
+        span {
+            font-size: 22px;
+            font-weight: 500;
+        }
     }
 }
 
@@ -47,20 +61,19 @@
 
 .discount {
     margin-left: 8px;
-    background-color: #a75689;
+    background-color: #893168;
     color: white;
     padding: 4px 8px;
-    border-radius: 4px;
+    border-radius: 20px;
     font-size: 12px;
 }
 
 .planDetails {
     padding: 16px;
     background-color: white;
-    width: 90%;
 
     ul {
-        list-style-image: url("./../../../assets/purpleTick.png");
+        list-style-image: url(${tick});
         padding: 0;
 
 
@@ -72,20 +85,15 @@
             margin-bottom: 8px;
             color: #555;
             list-style-image: url("./../../../assets/purpleTick.png");
-
-            &:before {
-                list-style-image: url("./../../../assets/purpleTick.png");
-                color: #5bb87d;
-                margin-right: 8px;
-            }
         }
     }
 }
 
 .planDetails>div {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 16px;
+    margin-bottom: 20px;
 }
 
 .planDetails>div>ul {
@@ -94,23 +102,27 @@
 }
 
 .subscribeButton {
+    width: 324px;
     display: block;
-    margin-top: 16px;
-    padding: 12px 24px;
-    background-color: #a75689;
+    height: 52px;
+    background-color: #893168;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .additionalInfo {
-    margin-top: 8px;
-    font-size: 12px;
-    color: #999;
+    font-size: 14px;
+    color: #6B7280;
+    width: 482px;
 }
 
 .active>.planHeader {
-    border-color: #a75689;
+    border-color: #893168;
 }
